--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
 </head>
 <body>
   <h1>Bienvenido a los Servicios de Salud con Inteligencia Artificial</h1>
+  <p>Soluciones predictivas, diagnósticas y de abastecimiento para el mundo de >
+</body>
+</html>
+<!-- index.html -->
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Dr. Ronal AI Services</title>
+</head>
+<body>
+  <h1>Bienvenido a los Servicios de Salud con Inteligencia Artificial</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Dr. Ronal AI Services</title>
+</head>
+<body>
+  <h1>Bienvenido a los Servicios de Salud con Inteligencia Artificial</h1>
   <p>Soluciones predictivas, diagnósticas y de abastecimiento para el mundo de la salud moderna.</p>
 </body>
 </html>
